<resources>
    <string name="app_name">Plan</string>
    <string name="tasks">Tasks</string>
    <string name="categories">Categories</string>
    <string name="goals">Goals</string>
    <string name="name">Name</string>
    <string name="create_fab">create action</string>
    <string name="task_name_required">Task name is required</string>
    <string name="create_category">Create Category</string>
    <string name="no_categories">Create or enable category</string>
    <string name="empty_category_details">Create or select a category</string>
    <string name="content_list_of_goals">List of goals</string>
    <string name="content_add_goal">Add Goal</string>
    <string name="goal">Goal</string>
    <string name="content_goal_name">Goal name</string>
    <string name="set_goal">Set Goal</string>
    <string name="content_goal_modify_action">Add or Edit Goal</string>
    <string name="content_goal_creation_icon">clock icon</string>
    <plurals name="numberOfSeconds">
        <item quantity="zero">%d seconds</item>
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="numberOfMinutes">
        <item quantity="zero">%d minutes</item>
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="numberOfHours">
        <item quantity="zero">%d hours</item>
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="numberOfDays">
        <item quantity="zero">%d day</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="out_of">out of</string>
    <string name="period">Period</string>
    <string name="content_goal_period_label">Goal period</string>
    <string name="content_goal_period">Goal period from creation to current day</string>
    <string name="tools_time">52</string>
    <string name="timer_select_time">Select time</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="content_edit_task">Edit Task</string>
    <string name="clone">Clone</string>
    <string name="content_task_clone">Clone Task</string>
    <string name="delete">Delete</string>
    <string name="content_category_image">Color palette icon</string>
    <string name="content_task_category">Task category name</string>
    <string name="content_task_creation_label">Task creation</string>
    <string name="content_task_creation">Task creation date and time</string>
    <string name="tools_creation">01 January 1970 00:00</string>
    <string name="priority">Priority</string>
    <string name="content_task_priority_slider">Priority slider</string>
    <string name="content_timer">Open Timer</string>
    <string name="task_archived">Task archived</string>
    <string name="content_task_creation_icon">Circle with plus icon</string>
    <string name="content_create_task">Create Task</string>
        <string name="timer">Timer</string>
    <string name="timer_channel_id" translatable="false">timer_channel</string>
    <string name="timer_channel_name" translatable="true">Timer</string>
    <string name="timer_channel_description">Timer Alerts</string>
    <string name="timer_complete">Timer complete</string>
    <string name="timer_complete_notification">Timer complete notification</string>
    <string name="timer_notification_message">Receive notification when the timer is complete</string>
    <string name="timer_complete_yes_notification">Timer complete notification will be sent</string>
    <string name="timer_complete_no_notification">Timer complete notification will not be sent</string>
    <string name="yes_notification">Timer complete notification will be sent</string>
    <string name="no_notification">No notifications</string>
    <string name="category">Category</string>
    <string name="title_tasks">Tasks tab</string>
    <string name="content_tasks_menu">View, add, edit tasks</string>
    <string name="title_categories">Categories tab</string>
    <string name="content_categories_menu">View, add or remove categories</string>
    <string name="title_goals">Goals tab</string>
    <string name="content_goals_menu">View, add, edit  goals</string>
    <string name="content_list_tasks">List of tasks</string>
    <string name="content_list_of_categories">List of categories</string>
    <string name="content_category_name">Category name</string>
    <string name="content_category_chip">%1$s chip</string>
    <string name="content_task_checkbox">Task complete</string>
    <string name="content_task_name">Task name</string>
    <string name="content_category_checkbox">Category enabled</string>
    <string name="content_account_image">Account image</string>
    <string name="category_deleted">Category deleted</string>
    <string name="select_completed_date">Select completed date</string>
    <string name="undo">UNDO</string>
    <string name="task_priority_icon">Compass icon</string>
    <string name="created">Creation</string>
    <string name="content_goal_creation">Goal creation date and time</string>
    <string name="days">Days</string>
    <string name="tools_days">10 days</string>
    <string name="content_goal_days_label">Goal days</string>
    <string name="content_goal_days">Number of goal days</string>
    <string name="content_task_date_start_icon">Calendar icon</string>
    <string name="select_completed_time">Select Completion Time</string>
    <string name="content_task_completion_label">Task completion</string>
    <string name="content_task_completion">Task completion</string>
    <string name="content_task_completion_icon">Circle with checkmark icon</string>
    <string name="completion">Completion</string>
    <string name="set_category">Set Category</string>
    <string name="content_category_modify_fab">Modify category</string>
    <string name="content_category_creation">Category creation date and tie</string>
    <string name="content_goal_category">Goal category</string>
    <string name="content_goal_creation_label">Goal creation label</string>
    <string name="set_task">Set Task</string>
    <string name="progress">Progress</string>
    <string name="twenty_five_minutes">25 minutes</string>
    <string name="fifty_two_minutes">52 minutes</string>
    <string name="custom">Custom</string>
    <string name="yes_please">Yes, please</string>
    <string name="no_thanks">No, thanks</string>
    <string name="sign_in_sign_up">Sign In or Sign Up</string>
    <string name="tasks_count">%d Tasks</string>
    <string name="tools_tasks_count">10 Tasks</string>
    <string name="goals_count">%d Goals</string>
    <string name="tools_goals_count">5 Goals</string>
    <string name="categories_count">%d Categories</string>
    <string name="tools_categories_count">4 Categories</string>
    <plurals name="numberOfTasks">
        <item quantity="zero">%d Tasks</item>
        <item quantity="one">%d Task</item>
        <item quantity="other">%d Tasks</item>
    </plurals>
    <plurals name="numberOfGoals">
        <item quantity="zero">%d Goals</item>
        <item quantity="one">%d Goal</item>
        <item quantity="other">%d Goals</item>
    </plurals>
    <plurals name="numberOfCategories">
        <item quantity="zero">%d Categories</item>
        <item quantity="one">%d Category</item>
        <item quantity="other">%d Categories</item>
    </plurals>
    <string name="sign_in_sign_up_sync">Sign In or Sign Up to backup and sync</string>
    <string name="tools_fifty_percent">50%</string>
    <string name="content_goal_completion">Goals completed today</string>
    <string name="sign_out">Sign Out</string>
    <string name="content_name_image">Brush icon</string>
    <string name="not_completed">Not completed</string>
    <string name="goal_deleted">Goal deleted</string>
    <string name="goal_days_required">Goal days is required</string>
    <string name="goal_name_required">Goal name is required</string>
    <string name="generate">Generate</string>
    <string name="content_goal_generate_icon">Circular arrows</string>
    <string name="content_edit_goal">Edit Goal</string>
    <string name="content_delete_goal">Delete Goal</string>
    <string name="content_delete_category">Delete Category</string>
    <string name="content_edit_category">Edit Category</string>
    <string name="content_days_image">Sun icon</string>
    <string name="create">CREATE</string>
    <string name="content_task_timer_label">Timer</string>
    <string name="content_task_timer_icon">Clock icon</string>
    <string name="content_task_timer">Task timer complete time</string>
    <string name="category_creation_icon">Circle with plus symbol</string>
    <string name="timer_not_set">Timer not set</string>
    <string name="start_not_set">Start not set</string>
    <string name="no_backup">No backup</string>
    <string name="content_archive_task">Archive task</string>
    <string name="archive">Archive</string>
    <string name="content_generate_goal_task">Generate task</string>
    <string name="task_generated">Task generated</string>
    <string name="content_measure_image">Pantone icon</string>
    <string name="measure">Measure</string>
    <string name="content_result_image">Award badge</string>
    <string name="result">Result</string>
    <string name="goal_measure_required">Goal measure is required</string>
    <string name="goal_result_required">Goal result is required</string>
    <string name="content_goal_pantone_icon">Pantone icon</string>
    <string name="content_goal_measure_label">Measure of goal</string>
    <string name="content_goal_measure">Measure</string>
    <string name="content_goal_result_icon">Award icon</string>
    <string name="content_goal_result">Goal result</string>
    <string name="content_goal_result_label">Goal result label</string>
    <string name="email_address">Email address</string>
    <string name="content_envelope_image">Envelope icon</string>
    <string name="content_lock_image">lock</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="authentication">Authentication</string>
    <string name="content_profile_menu">Profile tab</string>
    <string name="title_profile">Profile tab</string>
    <string name="profile">Profile</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="no_media_selected">No media selected</string>
    <string name="profile_picture_updated">Profile picture updated</string>
    <string name="profile_picture_upload_failed">Profile picture upload failed</string>
    <string name="sign_in_failed">Sign In failed</string>
    <string name="sign_up_failed">Sign Up failed</string>
    <string name="email_password_required">Email and password are required</string>
    <string name="notes">Notes</string>
    <string name="content_book_icon">Book icon</string>
    <string name="content_task_image">Task image</string>
    <string name="content_image_icon">Image icon</string>
    <string name="task_picture_updated">Task image updated</string>
    <string name="task_picture_upload_failed">Task picture upload failed</string>
    <string name="sign_in_up_required">Sign In or Sign Up required</string>
    <string name="image_fab">Modify task image</string>
    <string name="weak_password">Weak password</string>
    <string name="invalid_credentials">Invalid credential email or password is incorrect</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_required">Email required</string>
    <string name="password_reset_email_sent">Link to reset password sent to email</string>
    <string name="save">Save</string>
    <string name="timeline">Timeline</string>
    <string name="content_timeline_menu">View tasks timeline</string>
</resources>