<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:checked="true"
            android:contentDescription="@string/content_tasks_menu"
            android:icon="@drawable/ic_circle_check"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_goals"
            android:contentDescription="@string/content_goals_menu"
            android:icon="@drawable/ic_checkmark_circle"
            android:title="@string/goals" />

        <item
            android:id="@+id/nav_categories"
            android:contentDescription="@string/content_categories_menu"
            android:icon="@drawable/ic_color_palette_outline"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_timeline"
            android:contentDescription="@string/content_timeline_menu"
            android:icon="@drawable/ic_activity_outline"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_profile"
            android:contentDescription="@string/content_profile_menu"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>
</menu>