<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:contentDescription="@string/content_edit_goal"
        android:icon="@drawable/ic_edit_outline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/generate"
        android:title="@string/generate"
        android:contentDescription="@string/content_generate_goal_task"
        android:icon="@drawable/ic_radio_button_on"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:contentDescription="@string/content_delete_goal"
        android:icon="@drawable/ic_trash_outline"
        app:showAsAction="ifRoom" />

</menu>