<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="app.stacq.plan.domain.Task" />

        <variable
            name="taskNavigateListener"
            type="app.stacq.plan.ui.tasks.TaskNavigateListener" />

        <variable
            name="taskStartCompleteListener"
            type="app.stacq.plan.ui.tasks.TaskStartCompleteListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> taskNavigateListener.onClick(task.id)}">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/task_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/content_task_checkbox"
            android:button="@drawable/incomplete_start_complete_task_checkbox"
            android:onClick="@{() -> taskStartCompleteListener.onClick(task)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:taskCheckState="@{task}"
            app:taskCategoryColor="@{task.categoryColor}" />


        <TextView
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:contentDescription="@string/content_task_name"
            android:text="@{task.name}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/task_category_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/task_completed"
            app:layout_constraintTop_toTopOf="@id/task_completed"
            tools:text="@string/task" />

        <TextView
            android:id="@+id/task_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_task_category"
            android:text="@{task.categoryName}"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/task_completed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/task_completed"
            app:layout_constraintTop_toBottomOf="@id/task_name"
            tools:text="@string/category" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>