<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.goal.GoalFragment">

    <data>

        <variable
            name="goal"
            type="app.stacq.plan.domain.Goal" />

        <variable
            name="viewModel"
            type="app.stacq.plan.ui.goal.GoalViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/goal_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/goal_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/goal_app_bar_menu"
                app:title="@{goal.name}"
                tools:title="@string/goal">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/goal_category_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_artist_palette_icon"
                android:src="@drawable/ic_color_palette_outline"
                app:layout_constraintBottom_toBottomOf="@id/goal_category_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/goal_category_label_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_category_label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_creation"
                android:fontFamily="@font/roboto"
                android:text="@string/category"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_category_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/goal_category_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_category"
                android:fontFamily="@font/roboto"
                android:text="@{goal.categoryName}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_category_image"
                app:layout_constraintTop_toBottomOf="@+id/goal_category_label_text"
                tools:text="@string/category" />


            <ImageView
                android:id="@+id/goal_measure_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_goal_pantone_icon"
                android:src="@drawable/ic_pantone"
                app:layout_constraintBottom_toBottomOf="@id/goal_measure_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/goal_measure_label_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_measure_label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_measure_label"
                android:fontFamily="@font/roboto"
                android:text="@string/measure"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_measure_image"
                app:layout_constraintTop_toBottomOf="@id/goal_category_text" />

            <TextView
                android:id="@+id/goal_measure_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_measure"
                android:fontFamily="@font/roboto"
                android:text="@{goal.measure}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_measure_image"
                app:layout_constraintTop_toBottomOf="@id/goal_measure_label_text"
                tools:text="@string/measure" />

            <ImageView
                android:id="@+id/goal_result_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_goal_result_icon"
                android:src="@drawable/ic_award"
                app:layout_constraintBottom_toBottomOf="@id/goal_result_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/goal_result_label_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_result_label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_result_label"
                android:fontFamily="@font/roboto"
                android:text="@string/result"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_result_image"
                app:layout_constraintTop_toBottomOf="@id/goal_measure_text" />

            <TextView
                android:id="@+id/goal_result_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_result"
                android:fontFamily="@font/roboto"
                android:text="@{goal.result}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_result_image"
                app:layout_constraintTop_toBottomOf="@id/goal_result_label_text"
                tools:text="@string/result" />

            <ImageView
                android:id="@+id/goal_period_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_clock_icon"
                android:src="@drawable/ic_pie_chart"
                app:layout_constraintBottom_toBottomOf="@id/goal_period_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/goal_period_label_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_period_label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_period_label"
                android:fontFamily="@font/roboto"
                android:text="@string/period"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_period_image"
                app:layout_constraintTop_toBottomOf="@id/goal_result_text" />

            <TextView
                android:id="@+id/goal_period_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_period"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                app:daysDifference="@{goal.createdAt}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_period_image"
                app:layout_constraintTop_toBottomOf="@id/goal_period_label_text"
                tools:text="@string/tools_days" />

            <ImageView
                android:id="@+id/goal_days_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_clock_icon"
                android:src="@drawable/ic_sun"
                app:layout_constraintBottom_toBottomOf="@id/goal_days_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/goal_days_label_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_days_label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_days_label"
                android:fontFamily="@font/roboto"
                android:text="@string/days"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_days_image"
                app:layout_constraintTop_toBottomOf="@id/goal_period_text" />

            <TextView
                android:id="@+id/goal_days_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/content_goal_days"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                app:goalDays="@{goal.days}"
                app:goalProgress="@{goal.progress}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/goal_days_image"
                app:layout_constraintTop_toBottomOf="@id/goal_days_label_text"
                tools:text="@string/tools_days" />


            <ImageView
                android:id="@+id/goal_generate_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/content_goal_generate_icon"
                android:src="@drawable/ic_sync"
                app:layout_constraintBottom_toBottomOf="@+id/goal_generate_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/goal_generate_text"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/goal_generate_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/generate_task"
                android:fontFamily="@font/roboto"
                android:text="@string/generate_task"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/goal_generate_switch"
                app:layout_constraintStart_toEndOf="@id/goal_generate_image"
                app:layout_constraintTop_toBottomOf="@+id/goal_days_text" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/goal_generate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="@{goal.generate}"
                android:fontFamily="@font/roboto"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/goal_generate_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/goal_generate_text" />

            <TextView
                android:id="@+id/goal_progress_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/progress"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goal_generate_switch" />


            <GridLayout
                android:id="@+id/goal_days_grid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:columnCount="7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goal_progress_text">

                <!-- dynamic -->

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>